crates/synd_o11y/src/tracing_subscriber/otel_trace/snapshots/synd_o11y__tracing_subscriber__otel_trace__tests__layer_test_span_f1_resource.snap
---
source: crates/synd_o11y/src/tracing_subscriber/otel_trace/mod.rs
description: span f1 resource
expression: f1_span.resource
---
attributes:
  - key: service.name
    value:
      stringValue: test
droppedAttributesCount: 0
